[gd_scene load_steps=8 format=3 uid="uid://dvarrsvvjf41"]

[ext_resource type="StyleBox" uid="uid://da7kp4v152h16" path="res://theme/PANEL/panel_out.tres" id="1_m3tgk"]
[ext_resource type="Theme" uid="uid://biydd7f44lr8y" path="res://theme/mctheme_noscroll.tres" id="2_dkyjq"]
[ext_resource type="StyleBox" uid="uid://2rufke5tf48b" path="res://theme/PANEL/panel_title.tres" id="3_kalx8"]
[ext_resource type="Script" path="res://Plugins/edit/ui/scene/Tree.gd" id="3_sisr0"]
[ext_resource type="Texture2D" uid="uid://d1mggyyrflp6j" path="res://theme/icons/Layout.png" id="3_y5et2"]
[ext_resource type="Script" path="res://core/utility/RightClick/RightClick.gd" id="4_se0yd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fgrv4"]

[node name="Scene" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_m3tgk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="title" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_kalx8")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/title"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="c" type="FlowContainer" parent="VBoxContainer/title/MarginContainer"]
layout_mode = 2

[node name="icon" type="TextureRect" parent="VBoxContainer/title/MarginContainer/c"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("3_y5et2")
stretch_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/title/MarginContainer/c"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="name" type="Label" parent="VBoxContainer/title/MarginContainer/c/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "Nodes"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="Tree" type="Tree" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("2_dkyjq")
theme_override_constants/scroll_border = 25
theme_override_constants/scroll_speed = 20
theme_override_styles/panel = SubResource("StyleBoxEmpty_fgrv4")
hide_root = true
scroll_horizontal_enabled = false
script = ExtResource("3_sisr0")

[node name="RightClick" type="Node2D" parent="VBoxContainer/MarginContainer/ScrollContainer/Tree"]
position = Vector2(-5, -5)
script = ExtResource("4_se0yd")

[connection signal="cell_selected" from="VBoxContainer/MarginContainer/ScrollContainer/Tree" to="VBoxContainer/MarginContainer/ScrollContainer/Tree" method="_on_cell_selected"]
[connection signal="item_collapsed" from="VBoxContainer/MarginContainer/ScrollContainer/Tree" to="VBoxContainer/MarginContainer/ScrollContainer/Tree" method="_on_item_collapsed"]
[connection signal="item_edited" from="VBoxContainer/MarginContainer/ScrollContainer/Tree" to="VBoxContainer/MarginContainer/ScrollContainer/Tree" method="_on_item_edited"]
[connection signal="nothing_selected" from="VBoxContainer/MarginContainer/ScrollContainer/Tree" to="VBoxContainer/MarginContainer/ScrollContainer/Tree" method="_on_Tree_nothing_selected"]
[connection signal="right_click_end" from="VBoxContainer/MarginContainer/ScrollContainer/Tree/RightClick" to="VBoxContainer/MarginContainer/ScrollContainer/Tree" method="_on_right_click_right_click_end"]
[connection signal="right_click_start" from="VBoxContainer/MarginContainer/ScrollContainer/Tree/RightClick" to="VBoxContainer/MarginContainer/ScrollContainer/Tree" method="_on_right_click_right_click_start"]
